--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-ignore = B008, E501, E722, D100, D104, D106, 
+ignore = B008, E501, E722, D100, D104, D106, D102, D103
 exclude = .git,__pycache__,.venv,.eggs,*.egg,.mypy_cache,.vscode, env
 max-line-length = 120
 max-complexity = 10
