--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,12 @@
 {
   "name": "devc_plinor_backend_py",
-  "image": "plinor_backend_py-api_py:latest",
+  // "image": "plinor_backend_py-api_py:latest",
   // "build": {
   //   "dockerfile": "Dockerfile",
   //   "context": ".."
   // },
-  // "dockerComposeFile": "docker-compose.yaml",
-  // "service": "api_py",
+  "dockerComposeFile": ["docker-compose.yaml"],
+  "service": "api_py",
 
   "runArgs": [
     "--init",
