change setup devconteiner

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,8 +5,8 @@ FROM python:${PYTHON_VERSION} as base
 ARG DEBIAN_FRONTEND=noninteractive
 
 ARG PROJECT_NAME=plinor_backend_py
-# ARG GROUP_ID=5000
-# ARG USER_ID=5000
+ARG GROUP_ID=5000
+ARG USER_ID=5000
 
 
 ENV PYTHONDONTWRITEBYTECODE=1
@@ -18,7 +18,7 @@ ENV PYTHONUNBUFFERED=1
 # RUN chown -R ${PROJECT_NAME}:${PROJECT_NAME} ${PROJECT_NAME}
 
 
-WORKDIR /${PROJECT_NAME}
+WORKDIR /${PROJECT_NAME} 
 
 COPY . .
 
