--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,68 +1,104 @@
 {
   "name": "devc_plinor_backend_py",
-  "image": "plinor_backend_py-api_py:latest",
-  // "build": {
-  //   "dockerfile": "Dockerfile",
-  //   "context": ".."
-  // },
-  "dockerComposeFile": ["docker-compose.yaml"],
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": ".."
+  },
+  "image": "devcontainer-api_py:latest",
+  "dockerComposeFile": [
+    "docker-compose.yaml"
+  ],
   "service": "api_py",
-
   "runArgs": [
     "--init",
     "--privileged"
   ],
   "overrideCommand": true,
-
   "workspaceMount": "source=${localWorkspaceFolder},target=/plinor_backend_py,type=bind,consistency=delegated",
   "workspaceFolder": "/${localWorkspaceFolderBasename}",
   // Use this environment variable if you need to bind mount your local source code into a new container.
   // "remoteEnv": {
   // 	"LOCAL_WORKSPACE_FOLDER": "/home/vscode"
   // },
-
   "extensions": [
-    "ms-python.python",
+    "yzhang.markdown-all-in-one",
+    "yzhang.markdown-all-in-one-3.5.1.vsix",
     "wholroyd.jinja",
-    "formulahendry.code-runner",
-    "streetsidesoftware.code-spell-checker",
+    "wholroyd.jinja-0.0.8.vsix",
     "VisualStudioExptTeam.vscodeintellicode",
+    "VisualStudioExptTeam.vscodeintellicode-1.2.30.vsix",
     "VisualStudioExptTeam.intellicode-api-usage-examples",
-    "humao.rest-client",
-    "streetsidesoftware.code-spell-checker-russian",
-    "adpyke.vscode-sql-formatter",
-    "mtxr.sqltools",
     "ultram4rine.sqltools-clickhouse-driver",
-    "DotJoshJohnson.xml",
-    "redhat.vscode-yaml",
-    "njpwerner.autodocstring",
     "streetsidesoftware.code-spell-checker",
-    "njpwerner.autodocstring",
-    "aaron-bond.better-comments",
-    "VisualStudioExptTeam.vscodeintellicode",
-    "ms-python.isort",
-    "esbenp.prettier-vscode",
-    "ms-python.vscode-pylance",
-    "ms-python.python",
-    "hbenl.vscode-test-explorer",
-    "ms-vscode.test-adapter-converter",
-    "Gruntfuggly.todo-tree",
-    "funkyremi.vscode-google-translate",
-    "redhat.vscode-xml",
+    "streetsidesoftware.code-spell-checker-russian",
+    "streetsidesoftware.code-spell-checker-russian-2.1.0.vsix",
+    "streetsidesoftware.code-spell-checker-2.20.5.vsix",
+    "rust-lang.rust-0.7.9.vsix",
     "redhat.vscode-yaml",
-    "/extensions/aaron-bond.better-comments-3.0.2.vsix",
-    "/extensions/donjayamanne.python-environment-manager-1.1.1.vsix",
-    "/extensions/DotJoshJohnson.xml-2.5.1.vsix",
-    "/extensions/esbenp.prettier-vscode-10.1.0.vsix",
-    "/extensions/funkyremi.vscode-google-translate-1.4.13.vsix",
-    "/extensions/hbenl.vscode-test-explorer-2.21.1.vsix",
-    "/extensions/ms-python.python-2023.15.12421005.vsix",
-    "/extensions/ms-python.vscode-pylance-2023.8.51.vsix",
-    "/extensions/ms-vscode.test-adapter-converter-0.1.8.vsix",
-    "/extensions/njpwerner.autodocstring-0.6.1.vsix",
-    "/extensions/redhat.vscode-xml-0.26.2023080404@linux-x64.vsix",
-    "/extensions/redhat.vscode-yaml-1.14.0.vsix",
-    "/extensions/VisualStudioExptTeam.vscodeintellicode-1.2.30.vsix"
+    "redhat.vscode-yaml-1.14.0.vsix",
+    "redhat.vscode-xml",
+    "redhat.vscode-xml-0.26.2023080404@linux-x64.vsix",
+    "njpwerner.autodocstring",
+    "njpwerner.autodocstring-0.6.1.vsix",
+    "mtxr.sqltools",
+    "ms-vscode.test-adapter-converter",
+    "ms-vscode.test-adapter-converter-0.1.8.vsix",
+    "ms-vscode.remote-repositories",
+    "ms-vscode.remote-repositories-0.39.2023081601.vsix",
+    "ms-vscode.makefile-tools",
+    "ms-vscode.makefile-tools-0.7.0.vsix",
+    "ms-vscode.azure-repos",
+    "ms-toolsai.vscode-jupyter-slideshow",
+    "ms-toolsai.vscode-jupyter-slideshow-0.1.5.vsix",
+    "ms-toolsai.vscode-jupyter-cell-tags",
+    "ms-toolsai.vscode-jupyter-cell-tags-0.1.8.vsix",
+    "ms-toolsai.jupyter",
+    "ms-toolsai.jupyter-renderers",
+    "ms-toolsai.jupyter-keymap",
+    "ms-toolsai.jupyter-keymap-1.1.2.vsix",
+    "ms-toolsai.jupyter-2023.8.1002461100@linux-x64.vsix",
+    "ms-toolsai.jupyter-2023.8.1002461100.vsix",
+    "ms-python.vscode-pylance",
+    "ms-python.vscode-pylance-2023.8.50.vsix",
+    "ms-python.python",
+    "ms-python.python-2023.14.0.vsix",
+    "ms-python.pylint",
+    "ms-python.pylint-2023.7.12211006.vsix",
+    "ms-python.isort",
+    "ms-python.isort-2023.11.12061012.vsix",
+    "ms-python.flake8",
+    "ms-python.flake8-2023.7.12161007.vsix",
+    "ms-python.flake8-2023.6.0.vsix",
+    "ms-python.debugpy-2023.3.12121004.vsix",
+    "ms-python.autopep8-2023.7.12271005.vsix",
+    "ms-azuretools.vscode-docker",
+    "ms-azuretools.vscode-docker-1.26.0.vsix",
+    "mhutchie.git-graph",
+    "mhutchie.git-graph-1.30.0.vsix",
+    "KnisterPeter.vscode-github-0.30.7.vsix",
+    "humao.rest-client",
+    "hbenl.vscode-test-explorer",
+    "hbenl.vscode-test-explorer-2.21.1.vsix",
+    "Gruntfuggly.todo-tree",
+    "Gruntfuggly.todo-tree-0.0.226.vsix",
+    "github.remotehub",
+    "funkyremi.vscode-google-translate",
+    "funkyremi.vscode-google-translate-1.4.13.vsix",
+    "formulahendry.code-runner",
+    "formulahendry.code-runner-0.12.0.vsix",
+    "esbenp.prettier-vscode",
+    "esbenp.prettier-vscode-10.1.0.vsix",
+    "eamodio.gitlens",
+    "eamodio.gitlens-2023.9.605.vsix",
+    "DotJoshJohnson.xml",
+    "DotJoshJohnson.xml-2.5.1.vsix",
+    "donjayamanne.python-environment-manager",
+    "donjayamanne.python-environment-manager-1.0.4.vsix",
+    "donjayamanne.githistory-0.6.20.vsix",
+    "adpyke.vscode-sql-formatter",
+    "adpyke.vscode-sql-formatter-1.4.4.vsix",
+    "aaron-bond.better-comments",
+    "aaron-bond.better-comments-3.0.2.vsix",
   ],
   "settings": {
     "python.defaultInterpreterPath": "/usr/local/bin/python3.11",
