--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ version: "3.3"
 services:
   db_pg:
     container_name: db_pg
-    image: postgres:16rc1-bookworm
+    image: postgres:latest
+    build: custom-postgres
     restart: unless-stopped
     ports:
       - ${DB_PORT}:${DB_PORT}
@@ -13,7 +14,7 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_DB: ${DB_DBNAME}
     networks:
-      - proj_network
+      proj_network:
 
   db_redis:
     container_name: db_redis
@@ -22,7 +23,7 @@ services:
     ports:
       - ${RADIS_PORT}:${RADIS_PORT}
     networks:
-      - proj_network
+      proj_network:
 
   api_py:
     container_name: api_py
@@ -36,18 +37,17 @@ services:
       - db_pg
     # command: 'bash -c "cd ${PROJECT_NAME} uvicorn api.main:app --host 0.0.0.0 --port=${APP_PORT} --reload"'
     volumes:
-      - api_py-data:/plinor_backend_py
+      - api_py-data:/${PROJECT_NAME}
+    tty: true
+    working_dir: /${PROJECT_NAME}
     env_file:
       - .env
-    tty: true
     networks:
-      - proj_network
+      proj_network:
 
 volumes:
   postgres-data:
-      driver: local
   api_py-data:
-      driver: local
 
 networks:
   proj_network:
