--- a/custom-postgres/custom_postgresql.conf
+++ b/custom-postgres/custom_postgresql.conf
@@ -3,7 +3,7 @@
 # -----------------------------
 
 listen_addresses = '*'
-max_connections = 200
+max_connections = 100
 shared_buffers = 256MB
 dynamic_shared_memory_type = posix
 effective_cache_size = 768MB
@@ -14,10 +14,11 @@ default_statistics_target = 100
 random_page_cost = 1.1
 effective_io_concurrency = 200
 work_mem = 655kB
-min_wal_size = 1GB
-max_wal_size = 4GB
+min_wal_size = 256MB
+max_wal_size = 2GB
 jit=off
-
+log_min_duration_statement = 1000   #  оператор будет регистрировать все запросы, которые выполняются более 1 секунды
+log_line_prefix = 'host=%h time=%m pid=%p error=%e sess_id=%c %qtag=%i usr=%u db=%d app=%a '
 
 log_timezone = 'UTC'
 
