UPDATE Config dev conteiner

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "terminal.integrated.defaultProfile.windows": "Command Prompt",
     "cSpell.language": "en,ru",
     "files.autoSave": "afterDelay",
+    "extensions.ignoreRecommendations": true,
     "python.linting.flake8Enabled": true,
     "python.linting.pylintEnabled": true,
     "cSpell.userWords": [
@@ -67,11 +68,6 @@
     "vsintellicode.java.completionsEnabled": false,
     "vsintellicode.sql.completionsEnabled": false,
     "vsintellicode.typescript.completionsEnabled": false,
-    "thunder-client.saveToWorkspace": true,
-    "thunder-client.indentSize": 4,
-    "thunder-client.previewFeatures": true,
-    "thunder-client.workspaceRelativePath": "../",
-    "thunder-client.customLocation": "../",
     "notebook.consolidatedRunButton": true,
     "notebook.lineNumbers": "on",
     "jupyter.askForKernelRestart": false,
@@ -85,27 +81,10 @@
         "push:command",
         "switch:command"
     ],
-    "liveshare.accessibility.voice": "ru-RU-Dmitry",
-    "wakatime.apiKey": "0a1f617c-d65d-457f-8225-dc493322dcfa",
     "explorer.confirmDelete": false,
     "workbench.colorTheme": "Default High Contrast",
     "workbench.preferredDarkColorTheme": "Visual Studio Dark",
     "workbench.iconTheme": "vscode-icons",
-    "yaml.schemas": {
-        "file:///c%3A/Users/u12/.vscode/extensions/atlassian.atlascode-3.0.3/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
-    },
-    "atlascode.jira.enabled": true,
-    "atlascode.bitbucket.enabled": false,
-    "atlascode.jira.jqlList": [
-        {
-            "id": "0286144d-8e61-4373-97b0-2a79cbb3867d",
-            "enabled": true,
-            "name": "My all-code Issues",
-            "query": "assignee = currentUser() AND resolution = Unresolved ORDER BY lastViewed DESC",
-            "siteId": "826e83e5-798c-4720-bd22-a68cc7ce1ff4",
-            "monitor": true
-        }
-    ],
     "redhat.telemetry.enabled": true,
     "githubPullRequests.pullBranch": "never",
     "testExplorer.showOnRun": true,
@@ -159,48 +138,7 @@
             "username": "plinor",
             "askForPassword": false,
             "password": "plinor",
-            "connectionTimeout": 15
+            "connectionTimeout": 15,
         }
-    ],
-    "remote.extensionKind": {
-        "streetsidesoftware.code-spell-checker": [
-            "ui"
-        ],
-        "njpwerner.autodocstring": [
-            "ui"
-        ],
-        "aaron-bond.better-comments": [
-            "ui"
-        ],
-        "VisualStudioExptTeam.vscodeintellicode": [
-            "ui"
-        ],
-        "ms-python.isort": [
-            "ui"
-        ],
-        "esbenp.prettier-vscode": [
-            "ui"
-        ],
-        "ms-python.vscode-pylance": [
-            "ui"
-        ],
-        "ms-python.python": [
-            "ui"
-        ],
-        "hbenl.vscode-test-explorer": [
-            "ui"
-        ],
-        "ms-vscode.test-adapter-converter": [
-            "ui"
-        ],
-        "Gruntfuggly.todo-tree": [
-            "ui"
-        ],
-        "funkyremi.vscode-google-translate": [
-            "ui"
-        ],
-        "redhat.vscode-xml": [
-            "ui"
-        ],
-    }
+    ]
 }
