--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,23 +14,27 @@
     "workspaceFolder": "/${localWorkspaceFolderBasename}",
     
     "extensions": [
-        "aaron-bond.better-comments@3.0.2",
-        "esbenp.prettier-vscode@10.1.0",
-        "formulahendry.code-runner@0.12.0",
-        "Gruntfuggly.todo-tree@0.0.226",
-        "hbenl.vscode-test-explorer@2.21.1",
-        "ms-python.autopep8@2023.7.12271005",
-        "ms-python.flake8@2023.7.12161007",
-        "ms-python.isort@2023.11.12061012",
-        "ms-python.pylint@2023.7.12211006",
-        "ms-python.python@2023.14.0",
-        "ms-python.vscode-pylance@2023.8.50",
-        "ms-vscode.test-adapter-converter@0.1.8",
-        "njpwerner.autodocstring@0.6.1",
-        "yzhang.markdown-all-in-one@3.5.1",
-        "mtxr.sqltools@0.28.0",
-        "mtxr.sqltools-driver-mysql@0.6.0"
-    ],
+		"aaron-bond.better-comments@3.0.2",
+		"esbenp.prettier-vscode@10.1.0",
+		"formulahendry.code-runner@0.12.0",
+		"Gruntfuggly.todo-tree@0.0.226",
+		"hbenl.vscode-test-explorer@2.21.1",
+		"ms-python.autopep8@2023.7.12271005",
+		"ms-python.flake8@2023.7.12161007",
+		"ms-python.isort@2023.11.12061012",
+		"ms-python.pylint@2023.7.12211006",
+		"ms-python.python@2023.14.0",
+		"ms-python.vscode-pylance@2023.8.50",
+		"ms-vscode.test-adapter-converter@0.1.8",
+		"njpwerner.autodocstring@0.6.1",
+		"yzhang.markdown-all-in-one@3.5.1",
+		"mtxr.sqltools@0.28.0",
+		"mtxr.sqltools-driver-mysql@0.6.0",
+		"mhutchie.git-graph@1.30.0",
+		"donjayamanne.githistory@0.6.20",
+		"eamodio.gitlens@2023.9.605",
+        "KnisterPeter.vscode-github@0.30.7"
+	],
     "settings": {
         "python.defaultInterpreterPath": "/usr/local/bin/python3.11",
         "terminal.integrated.defaultProfile.linux": "/bin/bash",
